Note on font sizes

--- a/figures/si-vs-sii/README
+++ b/figures/si-vs-sii/README
@@ -14,3 +14,6 @@ C7 (Cervical S)  72 cm = 551 pixels
 C8 (Cervical U)  80 cm = 612 pixels
 C9 (Cervical T)  85 cm = 650 pixels
 C10 (Cervical P) 90 cm = 689 pixels
+
+Part-caption font size: 2690/28 = 96 point
+Taxon font size: 2690/47 = 57 point
