--- a/figures/cervical-v/README
+++ b/figures/cervical-v/README
@@ -1,5 +1,5 @@
 Greatest length in lateral view, from condyle projection to ventral
-margin of posterior face, measured 1884 pixels. This is 57 cm in real
+margin of posterior face, measures 1884 pixels. This is 57 cm in real
 life, so we have 1884/57 = 33.05 pixels per cm.
 
 So a 20 cm scale bar is 33.05*20 = 661 pixels
