Part-caption font calculation

--- a/figures/hmn-sii-multiview/README
+++ b/figures/hmn-sii-multiview/README
@@ -6,3 +6,5 @@ In this image, that comes to 2135 pixels
 
 So 20 cm scalebar is 18.89*20 = 378 pixels long
 And depth is 378/16 = 24 pixels
+
+Part-caption font size = 4185/28 = 149 points
